--- a/02_basic_syntax.ipynb
+++ b/02_basic_syntax.ipynb
@@ -1399,6 +1399,670 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### summary\n",
+    "- jupyter notebook\n",
+    "    - mode : 명령모드, 편집모드\n",
+    "    - style : markdown, code\n",
+    "    - 단축키\n",
+    "        - 실행 : shift + enter\n",
+    "        - 자동완성 : tab\n",
+    "        - docstring 보기 : shift + tab\n",
+    "        - 주석설정 : cmd(ctrl) + /\n",
+    "        - 셀 생성 : a(위에), b(아래에)\n",
+    "- python 기본 문법\n",
+    "    - 변수 선언 : RAM 저장공간에 값을 할당하는 행위\n",
+    "    - 식별자 규칙\n",
+    "        - 대문자, 소문자, 숫자, _\n",
+    "        - 가장 앞글자 숫자 사용 불가\n",
+    "        - 예약어 사용이 불가 : def, class, try ...\n",
+    "        - snake_case(변수, 함수), CamelCase(클래스)\n",
+    "        - pep8 문서\n",
+    "    - 데이터 타입\n",
+    "        - 동적타이핑 : 자동으로 저장공간의 데이터 타입이 설정\n",
+    "        - 기본 데이터 타입 : int, float, bool, str\n",
+    "        - 컬렉션 데이터 타입 : list(iterable), tuple(interable), dict\n",
+    "        - iterable : 순서가 있는 데이터의 집합\n",
+    "        - offset index : 특정 위치의 데이터를 출력할 때 사용\n",
+    "            - iterable한 데이터 타입에서만 사용이 가능\n",
+    "            - [] : mask, masking\n",
+    "            - [idx] : idx 위치 데이터를 출력\n",
+    "            - [start:end:stride] : stride만큼씩 점프하여 출력\n",
+    "    - 형변환\n",
+    "        - 이미 변수에 설정된 데이터 타입을 변경하는 행위\n",
+    "        - zip\n",
+    "            - 여러개의 리스트를 같은 인덱스끼리 묶어주는 함수\n",
+    "            - 두개의 리스트를 묶어서 dict로 형변환\n",
+    "    - 연산자\n",
+    "        - 산술 : +, -, *, /, //, %, **\n",
+    "        - 할당 : A (산술)= (data)\n",
+    "        - 비교 : <, >, ==, !=, >=, <=\n",
+    "        - 논리 : and, or, not\n",
+    "        - 멤버 : in, not in"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. 조건문\n",
+    "- 특정 조건에 따라서 코드를 실행하고자 할 때 사용\n",
+    "- if, else, elif"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python\n",
+      "done\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 조건부분에 bool 데이터 타입 이외의 데이터 타입이 오면 bool으로 형변환 되어 판단\n",
+    "if True:\n",
+    "    print(\"python\")\n",
+    "print(\"done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(False, True, True, True)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# int : 0을 제외한 나머지 값은 True\n",
+    "bool(0), bool(1), bool(-1), bool(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 1\n",
+    "if num:\n",
+    "    print(\"python\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "odd\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = 7\n",
+    "if number % 2 == 0:\n",
+    "    print(\"even\")\n",
+    "else:\n",
+    "    print(\"odd\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# float : 0.0을 제외한 나머지 실수는 True\n",
+    "# str : \"\"을 제외한 나머지 문자열은 True\n",
+    "# list, tuple, dict : [], (), {}를 제외한 나머지는 True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 지갑에 돈이 10000원 이상 있으면 택시를 타고 그렇지 않으면 걸어서 집에 갑니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "택시를 타고 집에 갑니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "money = 12000\n",
+    "\n",
+    "if money >= 10000:\n",
+    "    print(\"택시를 타고 집에 갑니다.\")\n",
+    "if money < 10000:\n",
+    "    print(\"걸어서 집에 갑니다.\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "택시를 타고 집에 갑니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "money = 12000\n",
+    "\n",
+    "if money >= 10000:\n",
+    "    print(\"택시를 타고 집에 갑니다.\")\n",
+    "else:\n",
+    "    print(\"걸어서 집에 갑니다.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "버스를 타고 집에 갑니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "money = 5000\n",
+    "\n",
+    "if money >= 10000:\n",
+    "    print(\"택시를 타고 집에 갑니다.\")\n",
+    "elif money >= 2000 and money < 10000:\n",
+    "    print(\"버스를 타고 집에 갑니다.\")\n",
+    "else:\n",
+    "    print(\"걸어서 집에 갑니다.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 계좌에 10000원이 들어있습니다.\n",
+    "# 인출 금액을 입력 받습니다.\n",
+    "# 인출 금액이 계좌에 있는 금액보다 크면 \"인출이 불가능합니다.\" 출력\n",
+    "# 인출 금액이 계좌에 있는 금액보다 작으면 \"인출 되었습니다.\" 출력\n",
+    "# 마지막에 현재 계좌의 잔액을 출력"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter output money: 100\n",
+      "100원이 인출 되었습니다.\n",
+      "9900\n"
+     ]
+    }
+   ],
+   "source": [
+    "account = 10000\n",
+    "out = int(input(\"Enter output money: \"))\n",
+    "if out > account:\n",
+    "    print(\"인출이 불가능합니다.\"+str(out - account)+ \"원의 잔액이 부족합니다.\")\n",
+    "else:\n",
+    "    account -= out\n",
+    "    print(str(out)+\"원이 인출 되었습니다.\")\n",
+    "print(account)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "현재 잔액은 9900원 입니다. 인출 금액은 100 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# string 데이터 타입의 format 함수\n",
+    "print(\"현재 잔액은 {}원 입니다. 인출 금액은 {} 입니다.\".format(account, out))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 삼항연산자\n",
+    "- 간단한 if, else 구문을 한줄의 코드로 표현할 수 있는 방법\n",
+    "- (True)if(condition) else(False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "# data 변수에 0이면 'zero' 출력, 아니면 'not zero' 출력\n",
+    "data = 0\n",
+    "if data:\n",
+    "    print(\"Not zero\")\n",
+    "else:\n",
+    "    print(\"zero\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'zero'"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = 0\n",
+    "result = \"not zero\" if data else \"zero\"\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. 반복문\n",
+    "- 반복되는 코드를 실행할 때 사용\n",
+    "- while, for, break, continue\n",
+    "- list comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# while\n",
+    "data = 3\n",
+    "while data: # 조건이 False가 될 때까지 구문의 코드를 실행\n",
+    "    # 반복되는 코드\n",
+    "    print(data)\n",
+    "    data -= 1\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 어떤 학생이 국어:80점, 영어:90점, 수학:100점을 맞았다.\n",
+    "# while 문을 이용해서 총점과 평균을 출력해주세요\n",
+    "# 학생의 점수는 list, dict로 표현해주세요"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "270\n",
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = {\"국어\": 80, \"영어\": 90, \"수학\": 100}\n",
+    "score = [{'name':'국어', \"score\": 80}, {\"name\":'영어', \"score\": 90}, {\"name\":\"수학\", \"score\": 100}]\n",
+    "score_len = len(score)\n",
+    "score_sum = 0\n",
+    "score_avg = 0\n",
+    "while score_len:\n",
+    "    score_sum += score[score_len-1][\"score\"]\n",
+    "    score_len -= 1\n",
+    "    if score_len == 0:\n",
+    "        score_avg = score_sum // len(score)\n",
+    "print(score_sum)\n",
+    "print(score_avg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'korean': 80, 'english': 90, 'math': 100}"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subject_ls = [\"korean\", \"english\", \"math\"]\n",
+    "points_ls = [80, 90, 100]\n",
+    "points_dict = dict(zip(subject_ls, points_ls))\n",
+    "points_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datas = points_ls.copy() # 깊은 복사 : 원본 데이터를 보존"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total, avg = 0, 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(270, 90.0)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "while datas:\n",
+    "    total += datas.pop()\n",
+    "avg = total / len(points_ls)\n",
+    "total, avg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 무한루프\n",
+    "# break : 반복문을 중단 시킬 때 사용되는 예약어\n",
+    "result = 1\n",
+    "while result:\n",
+    "    if result >= 10:\n",
+    "        break\n",
+    "    result += 1\n",
+    "    \n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### for\n",
+    "- iterable한 값을 하나씩 꺼내서 value에 대입시킨 후 코드를 iterable 벼수의 값 개수 만큼 실행\n",
+    "```\n",
+    "for <variable> in <iterable>:\n",
+    "    <code>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 2 4 "
+     ]
+    }
+   ],
+   "source": [
+    "# for : continue : 조건부분으로 올라가서 코드가 실행\n",
+    "ls = [0, 1, 2, 3, 4]\n",
+    "for data in ls:\n",
+    "    if data % 2:\n",
+    "        continue\n",
+    "    print(data, end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4950"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# for를 이용하여 코드를 100번 실행\n",
+    "# range 함수\n",
+    "list(range(100))\n",
+    "result = 0\n",
+    "for data in range(100):\n",
+    "    result += data\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([0, 1, 2, 3, 4], [5, 6, 7, 8, 9], [10, 8, 6, 4, 2])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# offset index 개념과 비슷하게 사용이 된다. \n",
+    "list(range(5)), list(range(5, 10)), list(range(10,0,-2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 0에서 10까지 짝수를 더한 총합\n",
+    "result = 0\n",
+    "for number in range(0, 11, 2):\n",
+    "    result += number\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "korean\n",
+      "english\n",
+      "math\n"
+     ]
+    }
+   ],
+   "source": [
+    "for data in points_dict:\n",
+    "    print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('korean', 80), ('english', 90), ('math', 100)]"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(points_dict.items())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "korean : 80\n",
+      "english : 90\n",
+      "math : 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k, v in points_dict.items():\n",
+    "    print('{} : {}'.format(k, v))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
